--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-09-14  huysmans
+
+	* doc/C/: xfce4-panel.html, xfce4-panel.xml: Documentation updates
+
+2003-09-14  xfce
+
+	* ChangeLog: Update ChangeLog
+
 2003-09-13  huysmans
 
 	* xfce4rc.hu: Fix hungarian translated config files
