Update tamil translations
(Old svn revision: 3853)

--- a/po/ta.po
+++ b/po/ta.po
@@ -1,470 +1,470 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# Tamil translation of Tamil XFCE Panel.
+# Copyright (C) 2003 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# Dinesh Nadarajah <n_dinesh@yahoo.com>, 2003.
+# 
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: Tamil XFCE Panel 4\n"
-"POT-Creation-Date: 2003-09-22 21:31+0200\n"
-"PO-Revision-Date: 2003-05-12 22:32+0600\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-07-30 09:20+0200\n"
+"PO-Revision-Date: 2003-09-24 17:41-0500\n"
 "Last-Translator: Dinesh Nadarajah <n_dinesh@yahoo.com>\n"
 "Language-Team: Tamil <tamilinix@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
+"Content-Transfer-Encoding: 8bit"
 
-#: panel/xfce_support.c:597
+#: panel/xfce_support.c:648
 msgid "Select file"
-msgstr "§¸¡ôÒ ¦¾Ã¢×¦ºö¸"
+msgstr "கோப்பு தெரிவுசெய்க"
 
-#: panel/controls_dialog.c:254
+#: panel/controls_dialog.c:246
 msgid "Change item"
-msgstr "¯ÕôÀÊ Á¡üÚ"
+msgstr "உருப்படி மாற்று"
 
-#: panel/controls_dialog.c:286 panel/item_dialog.c:647
+#: panel/controls_dialog.c:278 panel/item_dialog.c:650
 msgid "Position:"
-msgstr "­¼õ:"
+msgstr "இடம்:"
 
-#: panel/controls_dialog.c:331 panel/controls.c:272
+#: panel/controls_dialog.c:323 panel/controls.c:272
 msgid ""
 "Removing an item will also remove its popup menu.\n"
 "\n"
 "Do you want to remove the item?"
 msgstr ""
-"µ÷ ¯ÕôÀÊ¨Âì ¸ÆðÊÉ¡ø «¾ý §ÁøÁ£ðÒ ÀðÊÔõ ¸Æð¼ôÀÎõ.\n"
+"ஓர் உருப்படியைக் கழட்டினால் அதன் மேல்மீட்பு பட்டியும் கழட்டப்படும்.\n"
 "\n"
-"¯ÕôÀÊ¨Âì ¸Æð¼ Å¢ÕôÀÁ¡?"
+"உருப்படியைக் கழட்ட விருப்பமா?"
 
-#: panel/item_dialog.c:320
+#: panel/item_dialog.c:317
 msgid "Other Icon"
-msgstr "§Å§Ã¡÷ ÌÚõÀ¼õ"
+msgstr "வேரோர் குறும்படம்"
 
-#: panel/item_dialog.c:345
+#: panel/item_dialog.c:342
 msgid "Select icon"
-msgstr "ÌÚôÀ¼õ ¦¾Ã¢× ¦ºö"
+msgstr "குறுப்படம் தெரிவு செய்"
 
-#: panel/item_dialog.c:384
+#: panel/item_dialog.c:381
 msgid "Icon:"
-msgstr "ÌÚõÀ¼õ:"
+msgstr "குறும்படம்:"
 
-#: panel/item_dialog.c:433
+#: panel/item_dialog.c:430
 msgid "Select command"
-msgstr "¸ð¼¨Ç ¦¾Ã¢×¦ºö¸"
+msgstr "கட்டளை தெரிவுசெய்க"
 
-#: panel/item_dialog.c:461
+#: panel/item_dialog.c:458
 msgid "Command:"
-msgstr "¸ð¼¨Ç:"
+msgstr "கட்டளை:"
 
-#: panel/item_dialog.c:498 plugins/mailcheck/mailcheck.c:668
+#: panel/item_dialog.c:495 plugins/mailcheck/mailcheck.c:668
 msgid "Run in _terminal"
-msgstr "Ó¨ÉÂò¾¢ø þÂì¸"
+msgstr "முனையத்தில் þயக்க"
 
-#: panel/item_dialog.c:503 plugins/mailcheck/mailcheck.c:676
+#: panel/item_dialog.c:500 plugins/mailcheck/mailcheck.c:676
 msgid "Use startup _notification"
-msgstr "¦¾¡¼ì¸ _«È¢ôÒ ÀÂýÀÎò¾×õ"
+msgstr "தொடக்க _அறிப்பு பயன்படுத்தவும்"
 
-#: panel/item_dialog.c:530
+#: panel/item_dialog.c:527
 msgid "Caption:"
-msgstr "¾¨ÄôÒ Å¡ì¸¢Âõ"
+msgstr "தலைப்பு வாக்கியம்"
 
-#: panel/item_dialog.c:563
+#: panel/item_dialog.c:560
 msgid "Tooltip:"
-msgstr "¯¾Å¢¸ÕÅ¢:"
+msgstr "உதவிகருவி:"
 
-#: panel/item_dialog.c:599
-#, fuzzy
+#: panel/item_dialog.c:596
 msgid "Menu:"
-msgstr "ÀðÊ"
+msgstr "பட்டி"
 
-#: panel/item_dialog.c:606
+#: panel/item_dialog.c:603
 msgid "Attach menu to launcher"
-msgstr ""
+msgstr "ஓர் பட்டியை தொடங்கருடன் சேர்க்கவும்"
 
-#: panel/item_dialog.c:738
+#: panel/item_dialog.c:745
 msgid "Icon Preview"
-msgstr "ÌÚõÀ¼õ Óý¸¡ðº¢"
+msgstr "குறும்படம் முன்காட்சி"
 
-#: panel/item_dialog.c:742
+#: panel/item_dialog.c:749
 msgid "Drag file onto this frame to change the icon"
-msgstr "ÌÚõÀ¼ò¨¾ Á¡üÚÅ¾üÌ, þîºð¼õ §Áø §¸¡ôÒ þØòÐô §À¡¼×õ"
+msgstr "குறும்படத்தை மாற்றுவதற்கு, þச்சட்டம் மேல் கோப்பு þழுத்துப் போடவும்"
 
-#: panel/item_dialog.c:930
+#: panel/item_dialog.c:1031
 msgid "Change menu item"
-msgstr "ÀðÊ ¯ÕôÀÊ Á¡üÈ×õ"
+msgstr "பட்டி உருப்படி மாற்றவும்"
 
 #. add buttons
-#: panel/item_dialog.c:933
+#: panel/item_dialog.c:1034
 msgid "Remove"
-msgstr "¸ÆðÎ¸"
+msgstr "கழட்டுக"
 
 #: panel/item.c:441
 msgid "Click mouse button 3 to change item"
-msgstr "¯ÕôÀÊ Á¡üÚÅ¾üÌ 3¬õ ÍðÊ ¦À¡ò¾¡¨É «Óò¾×õ"
+msgstr "உருப்படி மாற்றுவதற்கு 3ஆம் சுட்டி பொத்தானை அமுத்தவும்"
 
 #: panel/item.c:464
 msgid "Add launcher"
-msgstr "¦¾¡¼í¸÷ §º÷ì¸×õ"
+msgstr "தொடங்கர் சேர்க்கவும்"
 
 #: panel/item.c:469
 msgid "Add new item"
-msgstr "Ò¾¢Â ¯ÕôÀÊ §º÷ì¸×õ"
+msgstr "புதிய உருப்படி சேர்க்கவும்"
 
 #: panel/item.c:601
 msgid "Launcher"
-msgstr "¦¾¡¼í¸÷"
+msgstr "தொடங்கர்"
 
-#: panel/main.c:132
+#: panel/main.c:129
 msgid "Are you sure you want to exit?"
-msgstr "¦ÅÇ¢¦ºøÄ ¯í¸ÙìÌ Å¢ÕôÀÁ¡?"
+msgstr "வெளிசெல்ல உங்களுக்கு விருப்பமா?"
 
-#: panel/main.c:268
+#: panel/main.c:259
 #, c-format
 msgid ""
 "%s, version %s\n"
 "Part of the XFce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
-"%s, À¾¢ôÒ %s\n"
-"XFce ¸½¢§Á¨º ÝÆ¨Ä §º÷ó¾Ð\n"
+"%s, பதிப்பு %s\n"
+"XFce கணிமேசை சூழலை சேர்ந்தது\n"
 "http://www.xfce.org\n"
 
-#: panel/main.c:284
+#: panel/main.c:275
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
-"¯í¸û º¡ÇÃ§ÁÄ¡Ç÷ http://www.freedesktop.org «Ú¾¢Â¢ð¼ º¡ÇÃ-ÌÈ¢ôÀ¢Î¸ÙìÌ ¬¾ÃÅÇ¢"
-"ôÒ ¸¢¨¼Â¡Ð. \n"
-"º¢Ä XFce ¦ºÂøÀ¡Î¸û Å¢ÕõÀ¢ÂÐ§À¡ø §Å¨Ä¦ºöÂ¡Ð."
+"உங்கள் சாளரமேலாளர் http://www.freedesktop.org அறுதியிட்ட சாளர-குறிப்பிடுகளுக்கு ஆதரவளி"
+"ப்பு கிடையாது. \n"
+"சில XFce செயல்பாடுகள் விரும்பியதுபோல் வேலைசெய்யாது."
 
 #: panel/controls.c:320 panel/panel.c:123
 msgid "/Add _new item"
-msgstr "/Ò¾¢Â _¯ÕôÀÊ §º÷ì¸×õ"
+msgstr "/புதிய _உருப்படி சேர்க்கவும்"
 
 #: panel/controls.c:322 panel/panel.c:125
 msgid "/_Properties..."
-msgstr "/_ÀñÒ¸û..."
+msgstr "/_பண்புகள்..."
 
 #: panel/controls.c:323
 msgid "/_Remove"
-msgstr "/_¸ÆðÎ¸"
+msgstr "/_கழட்டுக"
 
 #: panel/controls.c:655
 msgid "This item has no configuration options"
-msgstr "þó¾ ¯ÕôÀÊìÌ «¨ÁôÒò §¾÷×¸û ¸¢¨¼Â¡Ð"
+msgstr "þந்த உருப்படிக்கு அமைப்புத் தேர்வுகள் கிடையாது"
 
 #: panel/panel.c:121
 msgid "/XFce Panel"
-msgstr "/XFCE ÀÄ¨¸"
+msgstr "/XFCE பலகை"
 
 #: panel/panel.c:126
 msgid "/_Settings manager"
-msgstr "/_«¨ÁôÒ¸û §ÁÄ¡Ç÷"
+msgstr "/_அமைப்புகள் மேலாளர்"
 
 #: panel/panel.c:128
 msgid "/_About XFce"
-msgstr "/_XFCE ÀüÈ¢"
+msgstr "/_XFCE பற்றி"
 
 #: panel/panel.c:129
 msgid "/_Help"
-msgstr "/_¯¾Å¢"
+msgstr "/_உதவி"
 
 #: panel/panel.c:131
 msgid "/_Lock screen"
-msgstr "/_¾¢¨Ã¨Âô âðÎ¸"
+msgstr "/_திரையைப் பூட்டுக"
 
 #: panel/panel.c:132
 msgid "/E_xit"
-msgstr "/¦ÅÇ¢_î¦ºø"
+msgstr "/வெளி_ச்செல்"
 
 #: panel/panel.c:489 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
 msgid "XFce Panel"
-msgstr "XFCE ÀÄ¨¸"
+msgstr "XFCE பலகை"
 
 #: panel/icons.c:73
 msgid "Default"
-msgstr "¦¸¡¼¡¿¢¨Ä"
+msgstr "கொடாநிலை"
 
 #: panel/icons.c:74
 msgid "Editor"
-msgstr "À¾¢ôÀ¡ý"
+msgstr "பதிப்பான்"
 
 #: panel/icons.c:75
 msgid "File management"
-msgstr "§¸¡ôÒ §ÁÄ¡ñ¨Á"
+msgstr "கோப்பு மேலாண்மை"
 
 #: panel/icons.c:76
 msgid "Utilities"
-msgstr "ÀÂýÀ¡Î¸û"
+msgstr "பயன்பாடுகள்"
 
 #: panel/icons.c:77
 msgid "Games"
-msgstr "Å¢¨ÇÂ¡ðÎ¸û"
+msgstr "விளையாட்டுகள்"
 
 #: panel/icons.c:78
 msgid "Help browser"
-msgstr "¯¾Å¢ §Á§Ä¡Ê"
+msgstr "உதவி மேலோடி"
 
 #: panel/icons.c:79
 msgid "Multimedia"
-msgstr "Àø °¼¸õ"
+msgstr "பல் ஊடகம்"
 
 #: panel/icons.c:80
 msgid "Network"
-msgstr "Å¨ÄÂ¨ÁôÒ"
+msgstr "வலையமைப்பு"
 
 #: panel/icons.c:81
 msgid "Graphics"
-msgstr "Å¨ÃÅ¢Âø"
+msgstr "வரைவியல்"
 
 #: panel/icons.c:82
 msgid "Printer"
-msgstr "«îÍô¦À¡È¢"
+msgstr "அச்சுப்பொறி"
 
 #: panel/icons.c:83
 msgid "Productivity"
-msgstr "¯üÀò¾¢ò ¾¢Èý"
+msgstr "உற்பத்தித் திறன்"
 
 #: panel/icons.c:84
 msgid "Sound"
-msgstr "´Ä¢"
+msgstr "ஒலி"
 
 #: panel/icons.c:85
 msgid "Terminal"
-msgstr "Ó¨ÉÂõ"
+msgstr "முனையம்"
 
 #: panel/mcs_client.c:208
 msgid "Settings manager not available"
-msgstr "«¨ÁôÒ¸û §ÁÄ¡Ç÷ ¸¢¨¼Â¡Ð"
+msgstr "அமைப்புகள் மேலாளர் கிடையாது"
 
-#: panel/popup.c:263
+#: panel/popup.c:255
 msgid "Menu"
-msgstr "ÀðÊ"
+msgstr "பட்டி"
 
 #: settings/xfce_settings_dialog.c:119
 msgid "Tiny"
-msgstr "Á¢¸º¢È¢Â"
+msgstr "மிகசிறிய"
 
 #: settings/xfce_settings_dialog.c:123
 msgid "Small"
-msgstr "º¢È¢Ð"
+msgstr "சிறிது"
 
 #: settings/xfce_settings_dialog.c:127
 msgid "Medium"
-msgstr "¿Îò¾Ãõ"
+msgstr "நடுத்தரம்"
 
 #: settings/xfce_settings_dialog.c:131
 msgid "Large"
-msgstr "¦ÀÃ¢Ð"
+msgstr "பெரிது"
 
 #: settings/xfce_settings_dialog.c:190
 msgid "Horizontal"
-msgstr "¸¢¨¼Â¡É"
+msgstr "கிடையான"
 
 #: settings/xfce_settings_dialog.c:194
 msgid "Vertical"
-msgstr "¦ºíÌò¾Á¡É"
+msgstr "செங்குத்தமான"
 
 #: settings/xfce_settings_dialog.c:226 settings/xfce_settings_dialog.c:456
 msgid "Left"
-msgstr "­¼Ð"
+msgstr "இடது"
 
 #: settings/xfce_settings_dialog.c:230 settings/xfce_settings_dialog.c:457
 msgid "Right"
-msgstr "ÅÄÐ"
+msgstr "வலது"
 
 #: settings/xfce_settings_dialog.c:234 settings/xfce_settings_dialog.c:455
 #: settings/xfce_settings_dialog.c:511
 msgid "Top"
-msgstr "§Áø"
+msgstr "மேல்"
 
 #: settings/xfce_settings_dialog.c:238 settings/xfce_settings_dialog.c:454
 #: settings/xfce_settings_dialog.c:519
 msgid "Bottom"
-msgstr "¸£ú"
+msgstr "கீழ்"
 
 #: settings/xfce_settings_dialog.c:374
 msgid "Panel size:"
-msgstr "ÀÄ¨¸ «Ç×:"
+msgstr "பலகை அளவு:"
 
 #: settings/xfce_settings_dialog.c:390
 msgid "Panel orientation:"
-msgstr "ÀÄ¨¸ ¾¢¨º «¨Á×:"
+msgstr "பலகை திசை அமைவு:"
 
 #: settings/xfce_settings_dialog.c:407
 msgid "Popup position:"
-msgstr "ÀÄ¨¸ ­¼õ:"
+msgstr "பலகை இடம்:"
 
 #: settings/xfce_settings_dialog.c:424
 msgid "Icon theme:"
-msgstr "ÌÚõÀ¼õ §¾¡üÈõ:"
+msgstr "குறும்படம் தோற்றம்:"
 
 #: settings/xfce_settings_dialog.c:495
 msgid "Panel layer:"
-msgstr "ÀÄ¨¸ «Îì¸õ:"
+msgstr "பலகை அடுக்கம்:"
 
 #: settings/xfce_settings_dialog.c:515
 msgid "Normal"
-msgstr "­ÂøÀ¡ÉÐ"
+msgstr "இயல்பானது"
 
 #: settings/xfce_settings_dialog.c:535
 msgid "Center the panel:"
-msgstr "ÀÄ¨¸¨Â ¿ÎôÀÎòÐ:"
+msgstr "பலகையை நடுப்படுத்து:"
 
 #: settings/xfce_settings_dialog.c:559
 msgid "Set"
-msgstr "«¨Á"
+msgstr "அமை"
 
 #: settings/xfce_settings_dialog.c:595
 msgid "Autohide:"
-msgstr "¾¡É¡¸§Å ´Ç¢/Á¨È:"
+msgstr "தானாகவே ஒளி/மறை:"
 
 #: settings/xfce_settings_dialog.c:663
 msgid "XFce Panel Settings"
-msgstr "XFce ÀÄ¨¸ «¨ÁôÒ¸û"
+msgstr "XFce பலகை அமைப்புகள்"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
 msgid "Appearance"
-msgstr "§¾¡üÈõ"
+msgstr "தோற்றம்"
 
 #. Position
 #: settings/xfce_settings_dialog.c:696
 msgid "Position"
-msgstr "­¼õ"
+msgstr "இடம்"
 
 #. autohide
 #: settings/xfce_settings_dialog.c:712
 msgid "Behaviour"
-msgstr "´Øì¸õ"
+msgstr "ஒழுக்கம்"
 
 #: plugins/clock/clock.c:57
 msgid "Sunday"
-msgstr "»¡Â¢Ú"
+msgstr "ஞாயிறு"
 
 #: plugins/clock/clock.c:58
 msgid "Monday"
-msgstr "¾¢í¸û"
+msgstr "திங்கள்"
 
 #: plugins/clock/clock.c:59
 msgid "Tuesday"
-msgstr "¦ÅùÅ¡ö"
+msgstr "வெவ்வாய்"
 
 #: plugins/clock/clock.c:60
 msgid "Wednesday"
-msgstr "Ò¾ý"
+msgstr "புதன்"
 
 #: plugins/clock/clock.c:61
 msgid "Thursday"
-msgstr "Å¢Â¡Æý"
+msgstr "வியாழன்"
 
 #: plugins/clock/clock.c:62
 msgid "Friday"
-msgstr "¦ÅûÇ¢"
+msgstr "வெள்ளி"
 
 #: plugins/clock/clock.c:63
 msgid "Saturday"
-msgstr "ºÉ¢"
+msgstr "சனி"
 
 #: plugins/clock/clock.c:67
 msgid "January"
-msgstr "ÉÅÃ¢"
+msgstr "ஜனவரி"
 
 #: plugins/clock/clock.c:68
 msgid "February"
-msgstr "À¢ôÃÅÃ¢"
+msgstr "பிப்ரவரி"
 
 #: plugins/clock/clock.c:69
 msgid "March"
-msgstr "Á¡÷î"
+msgstr "மார்ச்"
 
 #: plugins/clock/clock.c:70
 msgid "April"
-msgstr "²ôÃø"
+msgstr "ஏப்ரல்"
 
 #: plugins/clock/clock.c:71
 msgid "May"
-msgstr "§Á"
+msgstr "மே"
 
 #: plugins/clock/clock.c:72
 msgid "June"
-msgstr "¤ý"
+msgstr "ஜுன்"
 
 #: plugins/clock/clock.c:73
 msgid "July"
-msgstr "¥¨Ä"
+msgstr "ஜூலை"
 
 #: plugins/clock/clock.c:74
 msgid "August"
-msgstr "¬¸ð"
+msgstr "ஆகஸ்ட்"
 
 #: plugins/clock/clock.c:75
 msgid "September"
-msgstr "¦ºô¼õÀ÷"
+msgstr "செப்டம்பர்"
 
 #: plugins/clock/clock.c:76
 msgid "October"
-msgstr "«ì§¼¡À÷"
+msgstr "அக்டோபர்"
 
 #: plugins/clock/clock.c:77
 msgid "November"
-msgstr "¿ÅõÀ÷"
+msgstr "நவம்பர்"
 
 #: plugins/clock/clock.c:78
 msgid "December"
-msgstr "ÊºõÀ÷"
+msgstr "டிசம்பர்"
 
 #: plugins/clock/clock.c:350
 msgid "Clock type:"
-msgstr "¸Ê¸¡Ãõ Å¨¸:"
+msgstr "கடிகாரம் வகை:"
 
 #: plugins/clock/clock.c:363
 msgid "Analog"
-msgstr "¦¾¡¼Ã¢¨º"
+msgstr "தொடரிசை"
 
 #: plugins/clock/clock.c:367
 msgid "Digital"
-msgstr "­Äì¸Ó¨È"
+msgstr "இலக்கமுறை"
 
 #: plugins/clock/clock.c:371
 msgid "LED"
-msgstr ""
+msgstr "LED"
 
 #: plugins/clock/clock.c:433
 msgid "Hour mode:"
-msgstr "Á½¢ Å¨¸:"
+msgstr "மணி வகை:"
 
 #: plugins/clock/clock.c:440
 msgid "24 hour"
-msgstr "24 Á½¢"
+msgstr "24 மணி"
 
 #: plugins/clock/clock.c:446
 msgid "12 hour"
-msgstr "12 Á½¢"
+msgstr "12 மணி"
 
 #: plugins/clock/clock.c:452
 msgid "AM/PM"
-msgstr "¸¡/Á¡"
+msgstr "கா/மா"
 
 #: plugins/clock/clock.c:490
 msgid "Show seconds:"
-msgstr "¦¿¡Ê¸û ¸¡ñÀ¢ì¸×õ:"
+msgstr "நொடிகள் காண்பிக்கவும்:"
 
 #: plugins/clock/clock.c:599
 msgid "Xfce Clock"
-msgstr "XFCE ¸Ê¸¡Ãõ"
+msgstr "XFCE கடிகாரம்"
 
 #: plugins/pager/pager.c:277
 msgid "Graphical pager"
-msgstr "Å¨ÃÅ¢Âø ÀÂÉ¨ÆÂõ"
+msgstr "வரைவியல் பயனழையம்"
 
 #: plugins/switcher/switcher.c:696
 msgid "Desktop switcher"
-msgstr "§Å¨ÄÂ¢¼ Á¡üÈ¢"
+msgstr "வேலையிட மாற்றி"
 
 #: plugins/systembuttons/systembuttons.c:60
 msgid ""
@@ -472,79 +472,79 @@ msgid ""
 "\n"
 "Ask your system administrator for more information"
 msgstr ""
-"«¨ÁôÒ ÅÊÅ¨Áò¾ÖìÌ ¦ÀÚõÅÆ¢ ¸¢¨¼Â¡Ð.\n"
+"அமைப்பு வடிவமைத்தலுக்கு பெறும்வழி கிடையாது.\n"
 "\n"
-"¯í¸û ¸½¢ô¦À¡È¢ ¿¢÷Å¡¸¢Ô¼ý ¦¾¡¼÷Ò¦¸¡ûÇ×õ"
+"உங்கள் கணிப்பொறி நிர்வாகியுடன் தொடர்புகொள்ளவும்"
 
 #: plugins/systembuttons/systembuttons.c:148
 msgid "Lock the screen"
-msgstr "¾¢¨Ã¨Âô âðÎ¸"
+msgstr "திரையைப் பூட்டுக"
 
 #: plugins/systembuttons/systembuttons.c:149
 #: plugins/systembuttons/systembuttons.c:518
 msgid "Exit"
-msgstr "¦ºÇ¢î¦ºø"
+msgstr "வெளியேறுக"
 
 #: plugins/systembuttons/systembuttons.c:150
 #: plugins/systembuttons/systembuttons.c:519
 msgid "Setup"
-msgstr "«¨ÁôÒ"
+msgstr "அமைப்பு"
 
 #: plugins/systembuttons/systembuttons.c:151
 #: plugins/systembuttons/systembuttons.c:520
 msgid "Info"
-msgstr "¾¸Åø"
+msgstr "தகவல்"
 
 #: plugins/systembuttons/systembuttons.c:500
 msgid "Show two buttons:"
-msgstr "þÃñÎ ¦À¡ò¾¡ý¸¨Ç ¸¡ðÎ¸:"
+msgstr "þரண்டு பொத்தான்களை காட்டுக:"
 
 #. set names to use in option menus
 #: plugins/systembuttons/systembuttons.c:517
 msgid "Lock"
-msgstr "âðÎ"
+msgstr "பூட்டு"
 
 #: plugins/systembuttons/systembuttons.c:549
 msgid "Button 1:"
-msgstr "¦À¡ò¾¡ý 1:"
+msgstr "பொத்தான் 1:"
 
 #: plugins/systembuttons/systembuttons.c:565
 msgid "Button 2:"
-msgstr "¦À¡ò¾¡ý 2:"
+msgstr "பொத்தான் 2:"
 
 #: plugins/systembuttons/systembuttons.c:600
 msgid "System buttons"
-msgstr "«¨ÁôÒ ¦À¡ò¾¡ý¸û"
+msgstr "அமைப்பு பொத்தான்கள்"
 
 #: plugins/separator/separator.c:153
 msgid "Separator"
-msgstr ""
+msgstr "பிரிப்பு"
 
 #: plugins/mailcheck/mailcheck.c:539
 msgid "Mail box:"
-msgstr "«ïºø ¦ÀðÊ:"
+msgstr "அஞ்சல் பெட்டி:"
 
 #: plugins/mailcheck/mailcheck.c:623
 msgid "Mail command:"
-msgstr "«ïºø ¸ð¼¨Ç:"
+msgstr "அஞ்சல் கட்டளை:"
 
 #: plugins/mailcheck/mailcheck.c:637
 msgid "Command to run when the button on the panel is clicked"
-msgstr "ÀÄ¨¸ ¦À¡ò¾¡¨É «Óò¾¢É¡ø þÂì¸§ÅñÊÂ ¸ð¼¨Ç"
+msgstr "பலகை பொத்தானை அமுத்தினால் þயக்கவேண்டிய கட்டளை"
 
 #: plugins/mailcheck/mailcheck.c:706
 msgid "Interval (sec):"
-msgstr "­¨¼¦ÅÇ¢ (¦¿¡Ê):"
+msgstr "இடைவெளி (நொடி):"
 
 #: plugins/mailcheck/mailcheck.c:778
 msgid "Mail check"
-msgstr "«ïºø ºÃ¢À¡÷ôÒ"
+msgstr "அஞ்சல் சரிபார்ப்பு"
 
 #~ msgid "_Done"
-#~ msgstr "_ãÎ"
+#~ msgstr "_மூடு"
 
 #~ msgid "_Revert"
-#~ msgstr "_¿¢¨ÄÁ£ðÎ"
+#~ msgstr "_நிலைமீட்டு"
 
 #~ msgid "Type:"
-#~ msgstr "Å¨¸:"
+#~ msgstr "வகை:"
